[gd_scene load_steps=25 format=3 uid="uid://cjb0ih2pl00iw"]

[ext_resource type="PackedScene" uid="uid://beobv2epc1svd" path="res://objects/characters/player/SpaceRogueMeshInstance.tscn" id="1_h3xfe"]
[ext_resource type="Script" uid="uid://b224yxyvo20l4" path="res://objects/characters/player/player_controller.gd" id="1_ij4rl"]
[ext_resource type="Resource" uid="uid://ctdnbwc4meocc" path="res://objects/characters/player/movement_states/idle_state.tres" id="2_v5eyy"]
[ext_resource type="Resource" uid="uid://ccnfllqyfurht" path="res://objects/characters/player/movement_states/walk_state.tres" id="3_fnslv"]
[ext_resource type="Resource" uid="uid://c0rk8q1f4mxsx" path="res://objects/characters/player/movement_states/run_state.tres" id="4_dkt7x"]
[ext_resource type="Script" uid="uid://cxaiy87d7eobl" path="res://objects/characters/player/camera_controller.gd" id="4_ij4rl"]
[ext_resource type="Shader" uid="uid://clv2rr31lf0bl" path="res://scripts/shaders/sable.gdshader" id="5_846mj"]
[ext_resource type="Resource" uid="uid://cnf3so0jl7jja" path="res://objects/characters/player/movement_states/sprint_state.tres" id="5_dkt7x"]
[ext_resource type="PackedScene" uid="uid://crb7b2ap5nl0i" path="res://objects/particles/Scenes/3d_fire.tscn" id="7_xf1b1"]
[ext_resource type="Script" uid="uid://0hi3l0wjm7m7" path="res://objects/characters/player/movement_controller.gd" id="8_fnslv"]
[ext_resource type="Shader" uid="uid://dx4pcaue3d7yi" path="res://objects/particles/Shaders/ToonFire.gdshader" id="8_ngns1"]
[ext_resource type="Script" uid="uid://d30t3iyu6xate" path="res://objects/characters/player/animation_controller.gd" id="10_yed1w"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_er5ns"]
radius = 1.3
height = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pquuc"]
render_priority = 0
shader = ExtResource("8_ngns1")
shader_parameter/top_radius = 0.025
shader_parameter/bottom_radius = 0.0
shader_parameter/center_radius = 0.104
shader_parameter/center_position = 0.089
shader_parameter/cylinder_height = 3.399
shader_parameter/bottom_curve = 0.4
shader_parameter/_vibrate_amplitude = 0.04
shader_parameter/_vibrate_frequency = 150.0
shader_parameter/_speed = 2.0
shader_parameter/_scale = 2.0

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_dkt7x"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dkt7x"]
animation = &"Female_TwinKatana_Idle_24"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yed1w"]
animation = &"Female_TwinKatana_Walk_F_Inplace_160"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xf1b1"]
animation = &"Female_TwinKatana_Run_F_Inplace_136"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ngns1"]
animation = &"Female_TwinKatana_Sprint_Inplace_240"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_yed1w"]
blend_point_0/node = SubResource("AnimationNodeAnimation_dkt7x")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_yed1w")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_xf1b1")
blend_point_2/pos = 2.0
blend_point_3/node = SubResource("AnimationNodeAnimation_ngns1")
blend_point_3/pos = 3.0
min_space = 0.0
max_space = 3.0
snap = 1.0

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_xf1b1"]
graph_offset = Vector2(-329.28, 102.72)
nodes/movement_anim_speed/node = SubResource("AnimationNodeTimeScale_dkt7x")
nodes/movement_anim_speed/position = Vector2(60, 160)
nodes/movement_blend/node = SubResource("AnimationNodeBlendSpace1D_yed1w")
nodes/movement_blend/position = Vector2(-180, 120)
node_connections = [&"movement_anim_speed", 0, &"movement_blend", &"output", 0, &"movement_anim_speed"]

[sub_resource type="SphereShape3D" id="SphereShape3D_y6t6d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y6t6d"]
render_priority = 0
shader = ExtResource("5_846mj")
shader_parameter/threshold1 = 0.56
shader_parameter/night_time = 0.0
shader_parameter/shadow_value_threshold = 0.3
shader_parameter/dark_value_threshold = 0.17
shader_parameter/dark_brightness_scale = 60.0
shader_parameter/normal_threshold = 1.0
shader_parameter/depth_threshold = 10.0
shader_parameter/depth_artifact_correction_coef = 2.0
shader_parameter/outline_color = Color(0, 0, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_ij4rl"]
flip_faces = true
size = Vector2(2, 2)

[node name="PlayerPrefab" type="CharacterBody3D"]
script = ExtResource("1_ij4rl")
movement_states = {
"idle": ExtResource("2_v5eyy"),
"run": ExtResource("4_dkt7x"),
"sprint": ExtResource("5_dkt7x"),
"walk": ExtResource("3_fnslv")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
shape = SubResource("CapsuleShape3D_er5ns")

[node name="SpaceRogue" parent="." instance=ExtResource("1_h3xfe")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)

[node name="GeneralSkeleton" parent="SpaceRogue/Mesh" index="0"]
bones/1/position = Vector3(-0.012643, 0.956976, 0.00368242)
bones/1/rotation = Quaternion(0.0214827, -0.193148, 0.0589669, 0.979161)
bones/2/rotation = Quaternion(-0.0482038, 0.0200758, -0.0642025, 0.99657)
bones/3/rotation = Quaternion(0.0378132, 0.01171, -0.00491848, 0.999204)
bones/4/rotation = Quaternion(0.0161875, 0.0260024, -0.00891655, 0.999491)
bones/5/rotation = Quaternion(0.542136, 0.468711, 0.521033, -0.463598)
bones/6/rotation = Quaternion(-0.0579463, 0.972314, -0.209774, 0.0850987)
bones/7/rotation = Quaternion(-0.134333, -0.651648, -0.0589284, 0.744202)
bones/8/rotation = Quaternion(-0.247186, 0.625485, -0.116915, 0.730752)
bones/9/rotation = Quaternion(0.143609, 0.0773203, -0.0042885, 0.9866)
bones/10/rotation = Quaternion(0.346532, 0.222545, -0.0224515, 0.91098)
bones/11/rotation = Quaternion(0.337453, 0.178689, 0.00917193, 0.924182)
bones/12/rotation = Quaternion(0.20885, 0.106835, -0.008986, 0.972053)
bones/13/rotation = Quaternion(0.388512, 0.200882, -0.0128736, 0.899188)
bones/14/rotation = Quaternion(0.337271, 0.161225, -0.00138861, 0.927498)
bones/15/rotation = Quaternion(0.238619, 0.137531, 0.0304452, 0.960843)
bones/16/rotation = Quaternion(0.4365, 0.0225805, 0.014294, 0.899307)
bones/17/rotation = Quaternion(0.379402, 0.00559086, 0.0263011, 0.924841)
bones/18/rotation = Quaternion(0.307529, 0.146103, -0.0133103, 0.940161)
bones/19/rotation = Quaternion(0.336688, 0.120764, 0.0138018, 0.933738)
bones/20/rotation = Quaternion(0.376569, 0.115112, 0.0328709, 0.918621)
bones/21/rotation = Quaternion(-0.214477, 0.713585, 0.322567, 0.583735)
bones/22/rotation = Quaternion(-0.0121319, -0.00661522, 0.0141733, 0.999804)
bones/22/scale = Vector3(1.00005, 0.999982, 0.999968)
bones/23/rotation = Quaternion(0.141561, 0.311342, 0.0021601, 0.939693)
bones/23/scale = Vector3(1.00002, 1, 0.999981)
bones/24/position = Vector3(0.0806309, 0.0995333, 0.0559624)
bones/24/rotation = Quaternion(0.0390308, -0.213982, 0.40048, 0.890114)
bones/25/position = Vector3(0.0112332, 0.11224, 0.108366)
bones/25/rotation = Quaternion(-0.294776, -0.628048, 0.260886, 0.671268)
bones/26/rotation = Quaternion(0.478591, -0.52957, -0.568427, -0.409141)
bones/27/rotation = Quaternion(0.0296087, 0.969009, -0.241664, -0.0417625)
bones/28/rotation = Quaternion(-0.137241, 0.650899, 0.0600393, 0.744238)
bones/29/rotation = Quaternion(-0.277937, -0.634864, 0.19647, 0.693613)
bones/30/rotation = Quaternion(0.141585, -0.0812915, 0.000390858, 0.986583)
bones/31/rotation = Quaternion(0.339705, -0.235469, 0.010073, 0.910524)
bones/32/rotation = Quaternion(0.330772, -0.189905, -0.0205102, 0.924178)
bones/33/rotation = Quaternion(0.205708, -0.113427, 0.00238925, 0.972015)
bones/34/rotation = Quaternion(0.381538, -0.214149, 0.000111431, 0.899205)
bones/35/rotation = Quaternion(0.331344, -0.172838, -0.00965494, 0.927494)
bones/36/rotation = Quaternion(0.225402, -0.145117, -0.0403209, 0.962554)
bones/37/rotation = Quaternion(0.459583, -0.0366722, -0.0281249, 0.886932)
bones/38/rotation = Quaternion(0.376983, -0.0184106, -0.0370759, 0.925295)
bones/39/rotation = Quaternion(0.303244, -0.155624, 0.0042606, 0.94011)
bones/40/rotation = Quaternion(0.331624, -0.133727, -0.0261993, 0.933518)
bones/41/rotation = Quaternion(0.37148, -0.126712, -0.0456255, 0.918621)
bones/42/rotation = Quaternion(-0.21775, -0.716155, -0.333705, 0.573016)
bones/43/rotation = Quaternion(0.00203225, 0.0118502, 0.013094, 0.999842)
bones/43/scale = Vector3(1.00004, 0.999992, 0.999972)
bones/44/rotation = Quaternion(0.134868, -0.314213, 0.00767294, 0.939693)
bones/44/scale = Vector3(1.00002, 1, 0.999982)
bones/45/position = Vector3(-0.0806311, 0.0995341, 0.0559629)
bones/45/rotation = Quaternion(0.890115, -0.40048, -0.213982, -0.0390311)
bones/46/position = Vector3(-0.0112332, 0.11224, 0.108366)
bones/46/rotation = Quaternion(0.671268, -0.260887, -0.628048, 0.294776)
bones/47/rotation = Quaternion(0.0133557, 0.0583427, 0.0164415, 0.998072)
bones/48/rotation = Quaternion(0.0881566, 0.0799534, -0.0161636, 0.992761)
bones/49/rotation = Quaternion(0.185656, 0.0445994, 0.971508, 0.14041)
bones/50/rotation = Quaternion(-0.00298088, 0.999194, -0.0399524, 0.00233012)
bones/51/position = Vector3(0.00933645, 0.20339, 0.0220307)
bones/51/rotation = Quaternion(-0.68828, 0.722863, 0.016232, 0.0589537)
bones/52/rotation = Quaternion(0.0737279, 0.700396, -0.708491, -0.045275)
bones/53/rotation = Quaternion(-5.40006e-08, 1, -2.98023e-08, 5.40006e-08)
bones/54/position = Vector3(-0.0199251, 0.219967, -0.00576437)
bones/54/rotation = Quaternion(0.0103014, -0.0270749, -0.673926, 0.738231)
bones/55/rotation = Quaternion(-0.0383167, -0.0406124, 0.997683, 0.0388632)
bones/56/rotation = Quaternion(0.000988525, 0.997398, -0.0719178, -0.00480831)
bones/57/position = Vector3(-0.00933681, 0.203392, 0.0220308)
bones/57/rotation = Quaternion(0.0589518, -0.016234, 0.722862, 0.688282)
bones/58/rotation = Quaternion(-0.0186933, 0.696467, -0.717079, 0.0195604)
bones/59/rotation = Quaternion(0.00211442, 0.996436, 0.0843264, 0.000637014)
bones/60/position = Vector3(0.019925, 0.219967, -0.00576445)
bones/60/rotation = Quaternion(0.738231, 0.673925, -0.027073, -0.0102992)
bones/61/rotation = Quaternion(8.14603e-08, 0, 0, 1)
bones/62/position = Vector3(0.00668716, 0.128071, -0.0454773)
bones/62/rotation = Quaternion(0.0251004, 0.0209527, 0.704125, 0.709323)
bones/63/position = Vector3(-0.0265404, 0.137799, -0.265337)
bones/63/rotation = Quaternion(-0.689704, 0.672284, -0.0990361, 0.250069)
bones/63/scale = Vector3(1, 1, 1)
bones/64/rotation = Quaternion(8.14603e-08, 0, 0, 1)
bones/65/position = Vector3(-0.284921, 0.91012, -0.0994817)
bones/65/rotation = Quaternion(0.537543, 0.0725494, 0.506532, 0.670231)
bones/66/position = Vector3(0.287788, -0.239864, 0.39649)
bones/66/rotation = Quaternion(0.568983, -0.436209, 0.694065, 0.0652117)
bones/67/rotation = Quaternion(-1.67638e-08, 3.35276e-08, 4.44089e-16, 1)

[node name="LeftHandKatana" parent="SpaceRogue/Mesh/GeneralSkeleton" index="0"]
transform = Transform3D(0.623497, -0.253395, 0.739623, -0.771329, -0.0448698, 0.634853, -0.127682, -0.966322, -0.223427, 0.250788, 0.893259, 0.00196943)

[node name="RightHandKatana" parent="SpaceRogue/Mesh/GeneralSkeleton" index="2"]
transform = Transform3D(0.476324, -0.60099, 0.641815, 0.756984, -0.0910533, -0.647059, 0.447315, 0.794053, 0.411569, -0.284921, 0.91012, -0.0994815)

[node name="BoostFlames" type="BoneAttachment3D" parent="SpaceRogue/Mesh/GeneralSkeleton" index="3"]
transform = Transform3D(0.938908, 0.030636, -0.342802, -0.0204759, 0.999238, 0.0332195, 0.343558, -0.0241709, 0.93882, -0.0368846, 1.10653, 0.0200579)
bone_name = "Spine"
bone_idx = 2

[node name="3DFire" parent="SpaceRogue/Mesh/GeneralSkeleton/BoostFlames" instance=ExtResource("7_xf1b1")]
transform = Transform3D(9.55343e-16, -2.18557e-08, 0.5, -0.5, -2.18557e-08, 0, 2.18557e-08, -0.5, -2.18557e-08, 0, 0.28, -0.1)
visible = false
material_override = SubResource("ShaderMaterial_pquuc")

[node name="AnimationTree" type="AnimationTree" parent="SpaceRogue"]
tree_root = SubResource("AnimationNodeBlendTree_xf1b1")
anim_player = NodePath("../AnimationPlayer")
parameters/movement_anim_speed/scale = 1.0
parameters/movement_blend/blend_position = -0.605505

[node name="AnimationController" type="Node" parent="SpaceRogue" node_paths=PackedStringArray("anim_tree", "anim_player", "character")]
script = ExtResource("10_yed1w")
anim_tree = NodePath("../AnimationTree")
anim_player = NodePath("../AnimationPlayer")
character = NodePath("../..")

[node name="CameraRoot" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 4, 0)
script = ExtResource("4_ij4rl")

[node name="CameraYaw" type="Node3D" parent="CameraRoot"]

[node name="CameraPitch" type="Node3D" parent="CameraRoot/CameraYaw"]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraRoot/CameraYaw/CameraPitch"]
shape = SubResource("SphereShape3D_y6t6d")
spring_length = 12.0

[node name="Camera3D" type="Camera3D" parent="CameraRoot/CameraYaw/CameraPitch/SpringArm3D"]
transform = Transform3D(0.322581, 0, -3.55271e-15, 0, 0.322581, 0, 1.77636e-15, 0, 0.322581, 0, 0, 0)

[node name="QuadPlane" type="MeshInstance3D" parent="CameraRoot/CameraYaw/CameraPitch/SpringArm3D/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.89194, -0.452155, 0, 0.452155, 0.89194, 0.0454259, -0.92755, -6.07672)
material_override = SubResource("ShaderMaterial_y6t6d")
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_ij4rl")
skeleton = NodePath("../../../..")
metadata/_edit_lock_ = true

[node name="MovementController" type="Node" parent="." node_paths=PackedStringArray("character", "mesh_root")]
script = ExtResource("8_fnslv")
character = NodePath("..")
mesh_root = NodePath("../SpaceRogue/Mesh")

[connection signal="set_movement_direction" from="." to="MovementController" method="_on_set_movement_direction"]
[connection signal="set_movement_state" from="." to="SpaceRogue/AnimationController" method="_on_set_movement_state"]
[connection signal="set_movement_state" from="." to="CameraRoot" method="_on_set_movement_state"]
[connection signal="set_movement_state" from="." to="MovementController" method="_on_set_movement_state"]
[connection signal="set_cam_rotation" from="CameraRoot" to="MovementController" method="_on_set_cam_rotation"]

[editable path="SpaceRogue"]
